--- a/src/Components/cardlayout.css
+++ b/src/Components/cardlayout.css
@@ -1,13 +1,7 @@
 .layoutcard{
     flex-direction: row;
     display: flex;
-    border-radius: 20px;
     align-items: center;
-    min-width: 30vw;
-    max-width: 30vw;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-    color:white;
-    background-color: #423a6f;
     justify-content: space-between;
     margin-top:5px;
 }
@@ -22,4 +16,18 @@
 
 .layoutcard p{
     margin-left: 10px;
+}
+
+.layed{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    color:white;
+    background-color: #423a6f;
+    min-width: 30vw;
+    max-width: 30vw;
+    border-radius: 20px;
+}
+
+.layed p{
+    margin-left: 10px;
+    float:left;
 }
