--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@ input{
 }
 
 textarea{
-  padding: 12px 40px;
+  padding-bottom: 20px;
+  padding-top: 5px;
+  padding-left: 20px;
   border-radius: 10px;
 }
