--- a/src/Components/cardlayout.css
+++ b/src/Components/cardlayout.css
@@ -2,7 +2,6 @@
     flex-direction: row;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-top:5px;
 }
 
@@ -11,7 +10,12 @@
     background-color:#423a6f;
     border:'none';
     font-size:20px;
-    margin-right: 30px;
+    position: absolute;
+    right:0;
+}
+
+.hellob{
+    margin-right: 4vw;
 }
 
 .layoutcard p{
@@ -25,6 +29,7 @@
     min-width: 30vw;
     max-width: 30vw;
     border-radius: 20px;
+    position: relative;
 }
 
 .layed p{
